--- a/config/botdiddley.yml.template
+++ b/config/botdiddley.yml.template
@@ -2,3 +2,6 @@ twitteruser: username
 twitterpass: password
 owner: you
 interval: 120
+AMAZON_ACCESS_KEY_ID: abcdefghijklmnop
+AMAZON_SECRET_ACCESS_KEY: 1234567891012345
+AWS_BUCKET: botdiddley
